src/objects/Green_Circle_Content__c.object
<CustomObject>
    <fields>
        <fullName>Blog_Posts__c</fullName>
        <label>Blog Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discussions__c</fullName>
        <label>Discussions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideas__c</fullName>
        <label>Ideas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation_Date__c</fullName>
        <label>Observation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Polls__c</fullName>
        <label>Polls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Updates__c</fullName>
        <label>Status Updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Content__c</fullName>
        <formula>Blog_Posts__c + Discussions__c + Documents__c + Ideas__c + Polls__c + Status_Updates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Content</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Green Circle Content</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Date</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Green Circle Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>